--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
-	<body id="main"></body>
+	<body>
+		<div id="app"></div>
+	</body>
 </html>
